--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+html, body{
+  margin: 0px; 
+  padding: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.resume{
+  height: 1000px;
+  display:flex;
+  max-width:900px;
+  min-width:760px;
+  margin:auto;
+  font-family: monospace;
 }
+
+.left{
+  width:30%;
+  height: 100%;
+  background-color: #D7DBDD;
+
+}
+
+.photo{
+  border-radius: 100%;
+  width: 160px;
+  height: 160px;
+  object-fit:cover;
+  object-position: 60% 0;
+  display:block;
+  margin: 30px auto 30px;
+}
+
+.leftTitle{
+  height:200px;
+  margin-top:20px;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.leftTitle > div{
+  display:flex;
+  flex-direction: row;
+  font-size: 11px;
+  justify-content: space-between;
+}
+
+
+.row > div{
+  height:20px;
+}
+
+.row > div:first-child{
+  width:30%;
+  background: #34495E;
+  color: aliceblue;
+}
+
+.row div:last-child{
+  width:70%;
+}
+
+
+.right{
+  height:100%;
+  width:70%;
+  background-color:#E5E7E9;
+}
+
+.blank{
+  height: 50px; 
+}
+
+.header{
+  height:120px;
+  background-color: #D7DBDD;
+  font-size: 60px;
+  padding-left: 50px;
+}
+.header span{
+  font-size: 20px;
+  display: block;
+  font-family: monospace;
+  color: #34495E;
+  font-weight: 400;
+}
+.title{
+  padding-left: 20px;
+  padding-top: 10px;
+  font-size: 25px;
+}
+
+.subtitle{
+  font-size: 20px;
+}
+
+.description{
+  font-size: 15px;
+  margin-top: 10px;
+}
+hr{
+  margin: 0px;
+}
+
